--- a/pviewer5/QuickFilterDialog.xaml
+++ b/pviewer5/QuickFilterDialog.xaml
@@ -15,7 +15,7 @@
             <Setter Property="HorizontalAlignment" Value="Center"/>
         </Style>
         <local:MACConverterNumberOrAlias x:Key="macconverternumberoralias"/>
-        <local:IPv4ConverterNumberOrAlias x:Key="ipv4converternumberoralias"/>
+        <local:IP4ConverterNumberOrAlias x:Key="IP4converternumberoralias"/>
     </Window.Resources>
     <Grid Name="QFDgrid"
           Margin="20,29,20,11.333"
@@ -76,7 +76,7 @@
                 </DataGrid.ContextMenu>
              </DataGrid>
         </GroupBox>
-        <GroupBox Header="Criteria - IPv4"
+        <GroupBox Header="Criteria - IP4"
                   Grid.Column="0"
                   Grid.Row="1"
                   Margin="5,5,5,5">
@@ -84,31 +84,31 @@
             <!-- added VirtualizingPanel lines based on http://www.codewrecks.com/blog/index.php/2012/07/06/wpf-datagrid-poor-performance-on-sorting/ -->
             <!-- added CanUserAddrRows="False" to prevent display of blank row at end-->
             <DataGrid
-                Name="QFIPv4DG"
+                Name="QFIP4DG"
                 EnableColumnVirtualization="True"
                 EnableRowVirtualization="True"
                 VirtualizingPanel.IsVirtualizing="True"
                 VirtualizingPanel.VirtualizationMode="Recycling"
                 AutoGenerateColumns="False"
-                ItemsSource="{Binding Path=qfipv4local}"
+                ItemsSource="{Binding Path=qfIP4local}"
                 ItemStringFormat="x"
                 CanUserAddRows="False">
                 <DataGrid.Columns>
                     <DataGridComboBoxColumn Header="Incl/Excl" ItemsSource="{Binding Source={x:Static local:QuickFilterTools.QFInclItems}}" SelectedItemBinding="{Binding Path=inclusion}"/>
                     <DataGridTextColumn Header="Mask" >
                         <DataGridTextColumn.Binding>
-                            <Binding Path="mask" Converter="{StaticResource ipv4converternumberoralias}" >
+                            <Binding Path="mask" Converter="{StaticResource IP4converternumberoralias}" >
                                 <Binding.ValidationRules>
-                                    <local:ValidateIPv4NumberOrAlias/>
+                                    <local:ValidateIP4NumberOrAlias/>
                                 </Binding.ValidationRules>
                             </Binding>
                         </DataGridTextColumn.Binding>
                     </DataGridTextColumn>
-                    <DataGridTextColumn Header="IPv4 Address" >
+                    <DataGridTextColumn Header="IP4 Address" >
                         <DataGridTextColumn.Binding>
-                            <Binding Path="value" Converter="{StaticResource ipv4converternumberoralias}" >
+                            <Binding Path="value" Converter="{StaticResource IP4converternumberoralias}" >
                                 <Binding.ValidationRules>
-                                    <local:ValidateIPv4NumberOrAlias/>
+                                    <local:ValidateIP4NumberOrAlias/>
                                 </Binding.ValidationRules>
                             </Binding>
                         </DataGridTextColumn.Binding>
@@ -118,8 +118,8 @@
                 </DataGrid.Columns>
                 <DataGrid.ContextMenu>
                     <ContextMenu>
-                        <MenuItem Name="qfipv4addrowmenuitem" Header="Add Row" Command="{x:Static local:QuickFilterDialog.qfipv4addrow}"/>
-                        <MenuItem Name="qfipv4delrowmenuitem" Header="Delete Row"/>
+                        <MenuItem Name="qfIP4addrowmenuitem" Header="Add Row" Command="{x:Static local:QuickFilterDialog.qfIP4addrow}"/>
+                        <MenuItem Name="qfIP4delrowmenuitem" Header="Delete Row"/>
                     </ContextMenu>
                 </DataGrid.ContextMenu>
             </DataGrid>
