july 5 2015 commit before starting new phase of work

--- a/pviewer5/IPv4Tools.xaml
+++ b/pviewer5/IPv4Tools.xaml
@@ -26,7 +26,7 @@
 			Margin="5,5,5,5">
             <!-- added Enable*Virtualization lines based on http://www.elegant-software.net/2014/05/performance-of-the-wpf-datagrid.html -->
             <!-- added VirtualizingPanel lines based on http://www.codewrecks.com/blog/index.php/2012/07/06/wpf-datagrid-poor-performance-on-sorting/ -->
-            <!-- added CanUserAddrRows="False" to prevent display of blank row at end-->
+            <!-- added CanUserAddRows="False" to prevent display of blank row at end-->
             <DataGrid
 				x:Name="INMDG"
 				EnableColumnVirtualization="True"
