Re-factored into GUIUtil class, but do not yet have hex multivalueconverter working

--- a/pviewer5/MainWindow.xaml
+++ b/pviewer5/MainWindow.xaml
@@ -10,7 +10,8 @@
         <ObjectDataProvider x:Key="GUIUtilKey" ObjectType="{x:Type local:GUIUtil}"/>
         <ObjectDataProvider x:Key="IP4UtilKey" ObjectType="{x:Type local:IP4Util}"/>
         <ObjectDataProvider x:Key="MACUtilKey" ObjectType="{x:Type local:MACUtil}"/>
-        <local:IP4MultiConverterNumberOrAlias x:Key="IP4multiconverternumberoralias"/>
+        
+       <local:IP4MultiConverterNumberOrAlias x:Key="IP4multiconverternumberoralias"/>
         <local:MACMultiConverterNumberOrAlias x:Key="MACmulticonverternumberoralias"/>
 
         <DataTemplate DataType="{x:Type local:DNSRR}">
@@ -28,7 +29,7 @@
                     <TextBlock.Text>
                         <MultiBinding Converter="{StaticResource MACmulticonverternumberoralias}">
                             <Binding Path="SenderHW"/>
-                            <Binding Source="{StaticResource IP4UtilKey}" Path="Instance.UseAliases" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged"/>
+                            <Binding Source="{StaticResource GUIUtilKey}" Path="Instance.UseAliases" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged"/>
                         </MultiBinding>
                     </TextBlock.Text>
                 </TextBlock>
@@ -56,7 +57,7 @@
                     <TextBlock.Text>
                         <MultiBinding Converter="{StaticResource IP4multiconverternumberoralias}">
                             <Binding Path="SrcIP4"/>
-                            <Binding Source="{StaticResource IP4UtilKey}" Path="Instance.IP4Hex" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged"/>
+                            <Binding Source="{StaticResource GUIUtilKey}" Path="Instance.Hex" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged"/>
                         </MultiBinding>
                     </TextBlock.Text>
                 </TextBlock>
@@ -77,7 +78,7 @@
                 <CheckBox IsChecked="{Binding Path=Active}"/>
                 <Label Content="Active"/>
                 <Label Content="{Binding Path=DisplayInfo}"/>
-                <CheckBox IsChecked="{Binding Source={StaticResource IP4UtilKey}, Path=Instance.IP4Hex, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                <CheckBox IsChecked="{Binding Source={StaticResource GUIUtilKey}, Path=Instance.Hex, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
             </WrapPanel>
         </HierarchicalDataTemplate>
         <DataTemplate DataType="{x:Type local:FilterItem}">
@@ -134,11 +135,11 @@
                    Margin="5,5,5,5">
             <CheckBox Name="displayaliascheckbox"
                       Content="Display Aliases"
-                      IsChecked="{Binding Source={StaticResource IP4UtilKey}, Path=Instance.UseAliases, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                      IsChecked="{Binding Source={StaticResource GUIUtilKey}, Path=Instance.UseAliases, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                       Margin="20,5"/>
             <CheckBox Name="displayIP4inhexcheckbox"
                       Content="Display IP4 in Hex"
-                      IsChecked="{Binding Source={StaticResource IP4UtilKey}, Path=Instance.IP4Hex, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                      IsChecked="{Binding Source={StaticResource GUIUtilKey}, Path=Instance.Hex, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                       Margin="20,5"/>
         </WrapPanel>
         <GroupBox Header="Packet Groups"
